--- a/src/Terminal/Terminal.csproj
+++ b/src/Terminal/Terminal.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\TerminalModel.cs" />
+    <Compile Include="Presenter\DialogPresenter.cs" />
     <Compile Include="Presenter\IPresenter.cs" />
     <Compile Include="Presenter\MainPresenter.cs" />
     <Compile Include="View\DialogForm.cs">
@@ -56,6 +57,7 @@
     <Compile Include="View\DialogForm.Designer.cs">
       <DependentUpon>DialogForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\IDialogForm.cs" />
     <Compile Include="View\IMainForm.cs" />
     <Compile Include="View\IView.cs" />
     <Compile Include="View\MainForm.cs">
