--- a/src/TempServer/Server.csproj
+++ b/src/TempServer/Server.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{EDD20FD4-5321-4660-AF95-379919C7C913}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TempServer</RootNamespace>
-    <AssemblyName>TempServer</AssemblyName>
+    <RootNamespace>Server</RootNamespace>
+    <AssemblyName>Server</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
