--- a/src/TempServer/Server.csproj
+++ b/src/TempServer/Server.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\CashierExchangeService.cs" />
     <Compile Include="Service\TicketFactory.cs" />
-    <Compile Include="Settings\XmlProgrammSettings.cs" />
+    <Compile Include="Settings\XmlCashierSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Communication\Communication.csproj">
