--- a/src/Server/Server.csproj
+++ b/src/Server/Server.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entitys\DeviceCashier.cs" />
     <Compile Include="Entitys\TicketItem.cs" />
     <Compile Include="Entitys\Сashier.cs" />
     <Compile Include="Infrastructure\Server2CashierReadDataProvider.cs" />
